Modified to use the Integer#valuOf method instead of the constructor.
git-svn-id: https://masu.svn.sourceforge.net/svnroot/masu/trunk@442 5bdb5694-003a-4164-b60f-8fcef0365520